<resources>
    <string name="app_name">InterestCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="simple">Simple</string>
    <string name="compount">Compound</string>
    <string name="principle_amount">Principle Amount</string>
    <string name="interest_per_month_in_rupees">Interest Per Month In Rupees</string>
    <string name="given_date">Given Date</string>
    <string name="return_date">Return Date</string>
    <string name="calculate">Calculate</string>
    <string name="_12_9_sep_2021_14_20">12-9(SEP) 2021 14:20</string>
    <string name="interest">Interest</string>
    <string name="interest_type">Interest Type</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="duration">Duration</string>
    <string name="total_amount_19_2000">Total Amount: 19,2000</string>
    <string name="savd_name">Saved Name</string>
    <string name="city_name">City Name</string>
    <string name="todo">TODO</string>
    <string name="_45_000">45,000</string>
    <string name="_50_000">50,000</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="intrime_payments">Intrime Payments</string>
    <string name="view_transaction">View Transaction</string>
    <string name="name">Name</string>
    <string name="totl_amount">Total Amount</string>
    <string name="interim_pay_date">Interim Pay Date</string>
    <string name="interim_pay_amount">Interim Pay Amount</string>
    <string name="remarks">Remarks</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="save">Save</string>
    <string name="interim_payment">Interim Payment</string>
    <string name="total_amunt">Total Amount</string>
    <string name="interest_rate_by_percentage">Interest rate by percentage</string>
    <string name="compound_interest_period_in_months">Compound interest period (in months)</string>
    <string name="interest_rate_consider_per_month_in_rupees">Interest rate consider per month in rupees</string>
    <string name="allow_fractions">Allow Fractions</string>
    <string name="calculation_rounds_the_value">Calculation rounds the value</string>
    <string name="language">Language</string>
    <string name="share_app_with_your_friends">Share app with your friends</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="interest_rate_considered_as_annum">Interest rate considered as % per annum</string>
    <string name="allow_fraction">Allow Fraction</string>
    <string name="last_year_month_amp_days_compound_exemptions"><![CDATA[Last Year Month & Days Compound Exemptions]]></string>
    <string name="compound_interest_will_not_be">Compound Interest will not be calculated only for last year months and days</string>
    <string name="cancle">Cancle</string>
    <string name="ok">Ok</string>
    <string name="create_pdf">Create PDF</string>
</resources>