<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_history_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custon_saved_history_header"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvSavedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mediun"
                android:gravity="center"
                android:text="@string/savd_name"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/menu_icon" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/beig"
            android:fontFamily="@font/roboto_mediun"
            android:gravity="center"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@string/city_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_mediun"
                        android:paddingStart="10dp"
                        android:text="@string/given_date"
                        app:drawableStartCompat="@drawable/icn_calander"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvGivendate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="30dp"
                        android:text="@string/given_date" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_mediun"
                        android:paddingStart="10dp"
                        android:text="@string/return_date"
                        app:drawableStartCompat="@drawable/icn_calander"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvReturnDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="30dp"
                        android:text="@string/return_date" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_mediun"
                        android:paddingStart="10dp"
                        android:text="@string/principle_amount"
                        app:drawableStartCompat="@drawable/ic_rupee"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvPrincipleAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="30dp"
                        android:text="@string/principle_amount"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_mediun"
                        android:paddingStart="10dp"
                        android:text="@string/duration"
                        app:drawableStartCompat="@drawable/duration_icon"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvDuration"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingStart="30dp"
                        android:text="@string/duration"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/beig"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/interest"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/interest_type"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/interest_amount"
                    android:textSize="16sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/silver" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beig"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/interest"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvInterestType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="50,000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvInterestAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="45,000"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/totalAmountTv"
            android:text="@string/total_amount_19_2000"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>