<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/given_date"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:padding="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/btnCancler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/scandory_stripe_drawable">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/teal_color_drawable">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/cancle"
                        android:textAllCaps="true"
                        android:textColor="@color/color_scandory"
                        android:textSize="14sp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/scandory_stripe_drawable">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/teal_color_drawable">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAllCaps="true"
                        android:textColor="@color/color_scandory"
                        android:textSize="14sp" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

